fixed position of navigation, changed font, aligned

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,6 +53,9 @@ h1 {
     from, to { border-color: transparent } 50% { border-color: black }
 }
 
+.nav {
+  position: fixed;
+}
 .nav h1:hover {
   top: 17px;
   color: black;
@@ -80,13 +83,19 @@ h1 {
   
 }
 
+
 a:link {color: black;}      /* unvisited link */
 a:visited {color:black;}  /* visited link */
 a:hover {color: grey;}  /* mouse over link */
 a:active {color: black;}
 
-.navLinks a {
+.navLinks, .navLinks a {
   text-decoration: none;
+  padding-left: 5px;
+  padding-right: 15px;
+  margin-left: 0px;
+  float: left;
+
 }
 
 
@@ -100,7 +109,6 @@ a:active {color: black;}
   top: 30px;
   opacity: 0.2;
   background: #EEF1F3;
-  font: 1em 'Open Sans';
   text-align: center;
   line-height: 30px;
   color: #345;
